certificates/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  #annotations:
  #   acme.cert-manager.io/http01-edit-in-place: "true"
  #   cert-manager.io/issuer: "letsencrypt-staging"
  #nginx.ingress.kubernetes.io/rewrite-target: /teste
  name: api
spec:
  # tls:
  # - hosts:
  #   - api.takaboy.com.br
  #   # reference secret for production TLS certificate
  #   secretName: api-staging-certificate
  rules:
  # - host: tcc-cluster-75afc640137800a911de06ccf88655dd-0000.us-south.containers.appdomain.cloud
  - host: "api.takaboy.com.br"
    http:
      paths:
      - path: /teste
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 80
  # tls:
  # - hosts:
  #   - tcc.takaboy.com.br
  #   secretName: api-tls-secret
